- Use annotation processor only. - Add a codegen module. - Create class-path using libs folder (Helidon style) - Update README instructions - Placeholder impl for SPI - Placeholder impl for code generator - Demonstrate loops and nested templates