@@ -7,6 +7,7 @@
     <artifactId>string-templates-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <name>String Templates Parent</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -14,14 +15,15 @@
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
         <maven.compiler.release>${maven.compiler.source}</maven.compiler.release>
-        <version.plugin.exec>1.6.0</version.plugin.exec>
         <version.plugin.compiler>3.8.1</version.plugin.compiler>
+        <version.plugin.dependency>3.1.2</version.plugin.dependency>
         <version.plugin.jar>3.0.2</version.plugin.jar>
         <version.plugin.resources>2.7</version.plugin.resources>
     </properties>
 
     <modules>
         <module>api</module>
+        <module>codegen</module>
         <module>impl</module>
     </modules>
 
@@ -47,33 +49,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>${version.plugin.jar}</version>
-                    <configuration>
-                        <archive>
-                            <manifest>
-                                <addClasspath>true</addClasspath>
-                                <classpathPrefix>libs</classpathPrefix>
-                                <!--suppress UnresolvedMavenProperty -->
-                                <mainClass>${mainClass}</mainClass>
-                                <useUniqueVersions>false</useUniqueVersions>
-                            </manifest>
-                        </archive>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>exec-maven-plugin</artifactId>
-                    <version>${version.plugin.exec}</version>
-                    <configuration>
-                        <executable>java</executable>
-                        <longClasspath>true</longClasspath>
-                        <arguments>
-                            <argument>--enable-preview</argument>
-                            <argument>-classpath</argument>
-                            <classpath/>
-                            <!--suppress UnresolvedMavenProperty -->
-                            <argument>${mainClass}</argument>
-                        </arguments>
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
